# filamenty-rs

./: .env.example  README.md  docker-compose.yaml  example.env
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-start.sh  sample_data.sh  sample_inserts.sql
backend/app/: Cargo.toml
backend/app/src/: api_docs.rs  endpoints.rs  main.rs
backend/app/src/endpoints/: delete.rs  get.rs  mod.rs  patch.rs  post.rs
backend/lib/: Cargo.toml  diesel.toml
backend/lib/migrations/2025-12-08-193858-0000_create_tables/: down.sql  up.sql
backend/lib/src/: db.rs  lib.rs  schema.rs
backend/lib/src/db/: mod.rs  models.rs
backend/lib/src/qr/: mod.rs
backend/migrations/: 20251216181003_init.sql
docs/: dokumentacia.docx
docs/typst/: main.typ  title.typ
docs/uml/: db.puml  enums.puml  midmap.puml  project.puml  structs-endpoints.puml  structs-new.puml  structs.puml
frontend/: .env.example  Dockerfile  Dockerfile.old  index.html  vite.config.js
frontend/src/: AddFilament.jsx  App.jsx  DeleteFilament.jsx  EditFilament.jsx  Filament.jsx  Footer.jsx  Header.jsx  Labels.jsx  config.js  index.css
frontend/src/components/: DeleteConfirmation.jsx  DropdownMaterial.jsx  DropdownProduct.jsx  DropdownVendor.jsx  EditableImage.jsx  EditableTextField.jsx  FilamentCard.jsx  FilamentCardBar.jsx  FilamentEditableColor.jsx  FilamentLabel.jsx  FilamentLabelColors.jsx  FormattedDate.jsx  PageHeading.jsx  PageTitle.jsx  PlusButton.jsx  PlusInput.jsx
frontend/src/images/: missing_filament_original.link
frontend/src/pages/: Filament.jsx  Filaments.jsx  (+6 more)
