[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.9"
actix-web = "4.12.0"
serde = { version = "1.0.228", features = ["derive"] }
lib = { path = "../lib/" }
actix-multipart = "0.7.2"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
