[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
image = "0.25.9"
qrcode = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
utoipa = "5.4.0"
uuid = { version = "1.19.0", features = ["v4"] }
# pq-sys = { version = "0.7.5", features = ["bundled"] }
